# ideal-palm-tree

./: Cargo.toml  README.md  example.csv
src/: main.rs  model.rs  processor.rs
src/model/: account.rs  transaction.rs
