[package]
name = "tp"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
csv = "1.3.1"
rust_decimal = { version = "1.36.0", features = ["serde-float"] }
serde = { version = "1.0.215", features = ["derive"] }
thiserror = "2.0.3"

[dev-dependencies]
assert2 = "0.3.15"
indoc = "2.0.5"
